sql_select.cc:   Renamed variable, to avoid name clash with macro "rem_size"   on AIX 5.3 and "/usr/include/sys/xmem.h" (bug#17648) asn.cpp, asn.hpp:   Avoid name clash with NAME_MAX

sql/sql_select.cc:
  Renamed variable, to avoid name clash with macro "rem_size"
  on AIX 5.3 and "/usr/include/sys/xmem.h" (bug#17648)
extra/yassl/taocrypt/src/asn.cpp:
  Avoid name clash with NAME_MAX
extra/yassl/taocrypt/include/asn.hpp:
  Avoid name clash with NAME_MAX